# SegFormer

./: READme.md
BLAS Implementation/: CMakeLists.txt  main.cpp
BLAS Implementation/Headerfiles/: decoder.hpp  encoder.hpp  patch_embedding.hpp  preprocessing.hpp  transformer_block.hpp  visualization.hpp  weight_loader.hpp
BLAS Implementation/Src/: decoder.cpp  encoder.cpp  patch_embedding.cpp  preprocessing.cpp  transformer_block.cpp  weight_loader.cpp
Naive Implementation C++/: CMakeLists.txt
Naive Implementation C++/Headerfiles/: encoder.hpp  patch_embedding.hpp  transformer_block.hpp  visualization.hpp
Naive Implementation C++/Src/: encoder.cpp  transformer_block.cpp
Navie Implementation C++/: main.cpp
Navie Implementation C++/Headerfiles/: decoder.hpp  preprocessing.hpp  weight_loader.hpp
Navie Implementation C++/PreTrainedWeights/: PreTrainedWeightsDetails.txt  model_info.txt
Navie Implementation C++/Src/: decoder.cpp  patch_embedding.cpp  preprocessing.cpp  weight_loader.cpp
